--- a/src/main/resources/public/styles/styles.css
+++ b/src/main/resources/public/styles/styles.css
@@ -1,7 +1,24 @@
 .background {
-    background-image: url('http://c2gmusichall.com/wp-content/uploads/2014/08/backgrounds-that-work-well-with-shadygamer-shadygamer.jpg');
+    /*background-image: url('http://c2gmusichall.com/wp-content/uploads/2014/08/backgrounds-that-work-well-with-shadygamer-shadygamer.jpg');*/
+    background-color: #28a4c9;
     background-size: cover;
     width: 100%;
+}
+
+.feed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
+
+.feed-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 html,
@@ -17,7 +34,7 @@ body {
 
 body {
     font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: lightskyblue;
+    color: black;
 }
 
 .text-vertical-center {
