simplifying website color

--- a/src/main/resources/public/app/views/login.html
+++ b/src/main/resources/public/app/views/login.html
@@ -6,8 +6,7 @@
         <br>
         <br>
         <br>
-        <div
-            align=”center”><img src="images/FinalBanner.png" width="" height="" border="0">
+                    <div align=”justify”><img src="images/FinalBanner.png" width="" height="" border="0">
         </div>
     </center>
 
