--- a/src/main/resources/public/app/views/league.html
+++ b/src/main/resources/public/app/views/league.html
@@ -5,7 +5,6 @@
             <br>
             <br>
             <br>
-            <br>
 
             <div align="center">
                 <img src="images/Games/lol-logo.png">
@@ -29,10 +28,10 @@
 
 
                                 <iframe height="500" width="1000"
-                                        src="http://feed.mikle.com/widget/?rssmikle_url=http://na.leagueoflegends.com/en/rss.xml&rssmikle_frame_width=1000&rssmikle_frame_height=500&frame_height_by_article=0&rssmikle_target=_blank&rssmikle_font=Arial%2C%20Helvetica%2C%20sans-serif&rssmikle_font_size=12&rssmikle_border=off&responsive=off&text_align=left&text_align2=left&corner=off&scrollbar=on&autoscroll=on_mc&scrolldirection=up&scrollstep=3&mcspeed=20&sort=Off&rssmikle_title=on&rssmikle_title_bgcolor=%230066FF&rssmikle_title_color=%23FFFFFF&rssmikle_item_bgcolor=%23FFFFFF&rssmikle_item_title_length=55&rssmikle_item_title_color=%230066FF&rssmikle_item_border_bottom=on&rssmikle_item_description=on&item_link=off&rssmikle_item_description_length=150&rssmikle_item_description_color=%23666666&rssmikle_item_date=gl1&rssmikle_timezone=Etc%2FGMT&datetime_format=%25b%20%25e%2C%20%25Y%20%25l%3A%25M%20%25p&item_description_style=html&item_thumbnail=full&item_thumbnail_selection=auto&article_num=15&rssmikle_item_podcast=off&"
+                                        src="http://feed.mikle.com/widget/?rssmikle_url=http://na.leagueoflegends.com/en/rss.xml&rssmikle_frame_width=900&rssmikle_frame_height=500&frame_height_by_article=0&rssmikle_target=_blank&rssmikle_font=Arial%2C%20Helvetica%2C%20sans-serif&rssmikle_font_size=12&rssmikle_border=off&responsive=off&text_align=left&text_align2=left&corner=off&scrollbar=on&autoscroll=on_mc&scrolldirection=up&scrollstep=3&mcspeed=20&sort=Off&rssmikle_title=on&rssmikle_title_bgcolor=%230066FF&rssmikle_title_color=%23FFFFFF&rssmikle_item_bgcolor=%23FFFFFF&rssmikle_item_title_length=55&rssmikle_item_title_color=%230066FF&rssmikle_item_border_bottom=on&rssmikle_item_description=on&item_link=off&rssmikle_item_description_length=150&rssmikle_item_description_color=%23666666&rssmikle_item_date=gl1&rssmikle_timezone=Etc%2FGMT&datetime_format=%25b%20%25e%2C%20%25Y%20%25l%3A%25M%20%25p&item_description_style=html&item_thumbnail=full&item_thumbnail_selection=auto&article_num=15&rssmikle_item_podcast=off&"
                                         scrolling="no" name="rssmikle_frame" marginwidth="0" marginheight="0" vspace="0"
                                         hspace="0" frameborder="0"></iframe>
-                                <div style="font-size:10px; text-align:center; width:1000px;"></div>
+                                <!--<div style="font-size:10px; text-align:center; width:1000px;"></div>-->
 
                             </div>
                         </div>
@@ -47,10 +46,11 @@
                             <h3>Current Free Champs</h3>
                             <hr class="small">
                             <div class="row">
-                                <div class="row" ng-repeat="data in champData">
-                                    <div class="col-xs-10">
+                                <div class="row" ng-repeat="data in champData | limitTo: 5:0">
+                                    <div class="col-xs-2">
                                      <span class="pull-right">
                                         <p id="textRight"> {{data.key}} </p>
+
                                      </span>
                                     </div>
                                     <div class="col-xs-2">
