--- a/src/main/resources/public/app/views/diablo3.html
+++ b/src/main/resources/public/app/views/diablo3.html
@@ -1,1 +1,16 @@
-<center><h2>This is where Diablo 3 Stuff will go</h2></center>
+<div align="center">
+    <img class="img-portfolio img-responsive" img="" src="images/games/world-of-warcraft-logo.png">
+    <form>
+        <br>Enter BattleTag ( name-#### format )
+        <br>
+        <input type="text" name="battleTag" class="black-text" ng-model="id" />
+        <br>
+        <br>Enter Hero name
+        <br>
+        <input  class="black-text" ng-model="hero" name="hero">
+       
+        </input>
+
+        </br>
+        <button type="button" ng-click="heroLookup(id, hero)" class="btn btn-dark btn-sm add-topMargin">Hero Lookup</button>
+    </form>
