--- a/src/main/resources/public/styles/styles.css
+++ b/src/main/resources/public/styles/styles.css
@@ -32,12 +32,19 @@ body {
     color: black;
 }
 
+#summonerSearch{
+    width: 200px;
+}
+
 body {
     font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: black;
 }
 
-
+/*select{*/
+    /*width: 200px;*/
+    /*height:50px;*/
+/*}*/
 .text-vertical-center {
     display: table-cell;
     text-align: center;
