--- a/src/main/resources/public/app/views/diablo3.html
+++ b/src/main/resources/public/app/views/diablo3.html
@@ -4,13 +4,13 @@
         <br>Enter BattleTag ( name-#### format )
         <br>
         <input type="text" name="battleTag" class="black-text" ng-model="id" />
-        <br>
-        <br>Enter Hero name
-        <br>
-        <input  class="black-text" ng-model="hero" name="hero">
-       
-        </input>
+
 
         </br>
-        <button type="button" ng-click="heroLookup(id, hero)" class="btn btn-dark btn-sm add-topMargin">Hero Lookup</button>
+        <button type="button" ng-click="battlenetLookup(id, hero)" class="btn btn-dark btn-sm add-topMargin">Hero Lookup</button>
     </form>
+    <div ng-if="battlenet" class="gear-wrapper" >
+        <div  ng-repeat="hero in battlenet.heroes" class = "inline">
+            <button class="btn btn-dark btn-sm add-all-margin inline" ng-click="heroLookup(id, hero.id)">{{hero.name}}</button>
+        </div>
+    </div>
