basic table written like crap

--- a/src/main/resources/public/styles/styles.css
+++ b/src/main/resources/public/styles/styles.css
@@ -358,6 +358,9 @@ footer {
 .profile-pic {
     display: block;
 }
+.add-all-margin{
+ margin: 10px 10px 10px 10px;
+}
 
 .edit {
     padding-top: 7px;
