--- a/src/main/resources/public/app/views/diablo3.html
+++ b/src/main/resources/public/app/views/diablo3.html
@@ -10,6 +10,43 @@
         <button type="button" ng-click="battlenetLookup(id, hero)" class="btn btn-dark btn-sm add-topMargin">Hero Lookup</button>
     </form>
     <div ng-if="battlenet" class="gear-wrapper" >
+                <div class="pvp" >
+            <table class=table>
+                <tbody>
+             
+
+                    <div> Battlenet account stats for {{battlenet.battleTag}}</div>
+                    <tr>
+                        <td>Blacksmith Level: </td>
+                        <td>{{battlenet.blacksmith.level}}</td>
+                    </tr>
+                    <tr>
+                        <td>Hardcore Blacksmit Level: </td>
+                        <td>{{battlenet.blacksmithHardcore.level}}</td>
+                    </tr>
+                    <tr>
+                        <td>Jeweler Level: </td>
+                        <td>{{battlenet.jeweler.level}}</td>
+                    </tr>
+                    <td>Hardcore Jeweler Level: </td>
+                     <td>{{battlenet.jewelerHardcore.level}}</td>
+                    </tr>
+                    <tr>
+                        <td>Total Monsters Killed: </td>
+                        <td>{{battlenet.kills.monsters}}</td>
+                    </tr>
+                    <tr>
+                        <td>Total Elites Killed: </td>
+                        <td>{{battlenet.kills.elites}}</td>
+                    </tr>
+                      <tr>
+                        <td>Total Hardcore Monsters Killed: </td>
+                       <td>{{battlenet.kills.hardcoreMonsters}}</td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </div>
         <div  ng-repeat="hero in battlenet.heroes" class = "inline">
             <button class="btn btn-dark btn-sm add-all-margin inline" ng-click="heroLookup(id, hero.id)">{{hero.name}}</button>
         </div>
