--- a/src/main/resources/public/app/views/summonerPage.html
+++ b/src/main/resources/public/app/views/summonerPage.html
@@ -13,12 +13,10 @@
     <div>
         <form>
             <label>Select a champion: </label>
-            <select name="selectChamps" ng-model="champJson.selectChamps">
-                <option ng-repeat="champs in champJson" value = {{champs}}>{{champs.key}}</option>
+            <select name="selectChamps" ng-model="summonerInfo.selectChamps">
+                <option ng-repeat="champs in champJson" value = {{champs.id}}>{{champs.key}}</option>
             </select>
         </form>
-
-        {{champJson.selectChamps}}
     </div>
 
     <br>
@@ -30,7 +28,6 @@
                     <h2>Summoner:  {{summonerName}} </h2>
                     <hr class="small">
                     <div class="feed-container">
-                        <h2>Champion: {{ summonerInfo.champions[0]['id']}}</h2>
                         <!--need to return champion profile and Name-->
                         <p>Total Sessions Played: {{ summonerInfo.champions[0]["stats"]["totalSessionsPlayed"] }} </p>
 
