D3 Rss Feed and Removed Games We Aren't Using
Added RSS Feed for D3 and removed Hearthstone and CSGO

--- a/src/main/resources/public/app/views/login.html
+++ b/src/main/resources/public/app/views/login.html
@@ -239,12 +239,7 @@
                     </div>
                      <div class="col-md-6">
                         <div class="portfolio-item">
-                            <a href="http://blog.counter-strike.net/"><img class="img-portfolio img-responsive" img src="images/games/CS-GO-Logo.png"/></a>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="portfolio-item">
-                            <a href="http://us.battle.net/hearthstone/en/"><img class="img-portfolio img-responsive" img src="images/games/Hearthstone-logo.png"/></a>
+                            <a href="http://us.battle.net/d3/en//"><img class="img-portfolio img-responsive" img src="images/games/diablo3edit.png"/></a>
                         </div>
                     </div>
                     <!--iv class="col-md-6">
@@ -264,7 +259,7 @@
                 </div>
                 <!-- /.row (nested) -->
                 <!--a href="#headTab" class="btn btn-dark">View More Games</a-->
-                 <a ng-click="viewMoreGames()" class="btn btn-light">View More Games</a>
+                
             </div>
             <!-- /.col-lg-10 -->
         </div>
