--- a/src/main/resources/public/app/views/diablo3.html
+++ b/src/main/resources/public/app/views/diablo3.html
@@ -16,6 +16,8 @@
     <div ng-if="battlenet && !error" ng-repeat="hero in battlenet.heroes" class="inline">
         <button class="btn btn-dark btn-sm add-all-margin inline" ng-click="heroLookup(id, hero.id)">{{hero.name}}</button>
     </div>
+<br>
+<iframe  height="500"  width="1000" src="http://feed.mikle.com/widget/?rssmikle_url=http%3A%2F%2Fwww.diabloii.net%2Ffeed&rssmikle_frame_width=1000&rssmikle_frame_height=500&frame_height_by_article=0&rssmikle_target=_blank&rssmikle_font=Arial%2C%20Helvetica%2C%20sans-serif&rssmikle_font_size=12&rssmikle_border=off&responsive=off&text_align=left&text_align2=left&corner=off&scrollbar=on&autoscroll=on_mc&scrolldirection=up&scrollstep=3&mcspeed=20&sort=Off&rssmikle_title=on&rssmikle_title_sentence=Diablo%203%20RSS%20Feed&rssmikle_title_bgcolor=%230066FF&rssmikle_title_color=%23FFFFFF&rssmikle_item_bgcolor=%23FFFFFF&rssmikle_item_title_length=55&rssmikle_item_title_color=%230066FF&rssmikle_item_border_bottom=on&rssmikle_item_description=on&item_link=off&rssmikle_item_description_length=150&rssmikle_item_description_color=%23666666&rssmikle_item_date=gl1&rssmikle_timezone=Etc%2FGMT&datetime_format=%25b%20%25e%2C%20%25Y%20%25l%3A%25M%20%25p&item_description_style=html&item_thumbnail=full&item_thumbnail_selection=auto&article_num=200&rssmikle_item_podcast=off&" scrolling="no" name="rssmikle_frame" marginwidth="0" marginheight="0" vspace="0" hspace="0" frameborder="0"></iframe>
 </div>
 <div ng-if="battlenet && !error" class="gear-wrapper">
     <div class="pvp">
@@ -88,8 +90,4 @@
 
         </div>
     </div>
-
-
-
-
 </div>
